@@ -120,8 +120,8 @@
 	<type>string</type>
 	<default>#00b35b</default>
 	<locale name="C">
-		<short>the graph color for user-related cpu activity.</short>
-		<long>the graph color for user-related cpu activity.</long>
+		<short>the graph color for user-related mem usage.</short>
+		<long>the graph color for user-related mem usage.</long>
 	</locale>
 </schema>
 <schema>
@@ -130,8 +130,8 @@
 	<type>string</type>
 	<default>#00e675</default>
 	<locale name="C">
-		<short>the graph color for system-related cpu activity.</short>
-		<long>the graph color for system-related cpu activity.</long>
+		<short>the graph color for shared memory.</short>
+		<long>the graph color for shared memory.</long>
 	</locale>
 </schema>
 <schema>
@@ -140,12 +140,22 @@
 	<type>string</type>
 	<default>#00ff82</default>
 	<locale name="C">
-		<short>the graph color for nice-related cpu activity.</short>
-		<long>the graph color for nice-related cpu activity.</long>
+		<short>the graph color for buffer memory.</short>
+		<long>the graph color for buffer memor.</long>
 	</locale>
 </schema>
 <schema>
 	<key>/schemas/apps/multiload/prefs/memload_color3</key>
+	<owner>multiload-applet-2</owner>
+	<type>string</type>
+	<default>#AAF5D0</default>
+	<locale name="C">
+		<short>the graph color for cached memory.</short>
+		<long>the graph color for cached memor.</long>
+	</locale>
+</schema>
+<schema>
+	<key>/schemas/apps/multiload/prefs/memload_color4</key>
 	<owner>multiload-applet-2</owner>
 	<type>string</type>
 	<default>#000000</default>
