@@ -1,5 +1,10 @@
 2003-04-08  Kevin Vandersloot <kfv101@psu.edu>
 
+	* linux-proc.c, properties.c, memload.c: Add seperate entry for cached memory. 
+	Fixes bug #91971
+
+2003-04-08  Kevin Vandersloot <kfv101@psu.edu>
+
 	* loadavg.c, properties.c, main.c: get load average graph working. From Patch by
 	rwahl at gmx de. Fixes bug #107935
 	
